c/examples/writing-a-c-compiler-tests/tests/chapter_15/invalid_types/conflicting_function_declarations.c
/* This is adjusted to
 *   int f(int (*arr)[3])
 */
int f(int arr[2][3]);

/* This is adjusted to
 *   int f(int (*arr)[4])
 * so it conflicts with the previous declaration
 */
int f(int arr[2][4]);